--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.7.2.1) jammy; urgency=medium
+
+  * Adding new touchpad model to touchpadxlibinputrc.
+
+ -- Daniel Duran <daduve@gmail.com>  Thu, 28 Nov 2024 12:34:03 +0100
+
 lliurex-artwork (23.7.2.0) jammy; urgency=medium
 
   * Added a default (bigger) screen locker timeout
