--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (25.1.0.0) noble; urgency=medium
+
+  * Added a default cursor theme
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Mon, 17 Mar 2025 12:51:06 +0100
+
 lliurex-artwork (25.0.0.0+build7) noble; urgency=medium
 
   * Fixed logout screen
