--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (25.1.1.0) noble; urgency=medium
+
+  * Some random fixes here and there in the way to achieve release 25
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Thu, 20 Mar 2025 13:45:21 +0100
+
 lliurex-artwork (25.1.0.0) noble; urgency=medium
 
   * Added a default cursor theme
