--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (25.2.3.0) noble; urgency=medium
+
+  * Should fix konsole settings and plasma welcome not showing
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Tue, 22 Apr 2025 14:33:24 +0200
+
 lliurex-artwork (25.2.2.0) noble; urgency=medium
 
   * Several UI fixes
