--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (25.2.3.2) noble; urgency=medium
+
+  * Fixed console post-inst destroying bashrc
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Fri, 25 Apr 2025 09:20:12 +0200
+
 lliurex-artwork (25.2.3.1) noble; urgency=medium
 
   * Should fix konsole settings and plasma welcome not showing
