--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (25.2.6.0) noble; urgency=medium
+
+  * Removed kcalc and added firefox (again) to launcher
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Fri, 02 May 2025 13:54:18 +0200
+
 lliurex-artwork (25.2.5.0) noble; urgency=medium
 
   * Fixed typo
