--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.7.2.2) jammy; urgency=medium
+
+  * Add krunnerrc to skel to disable appstream search (discover) in krunner
+
+ -- Juanma1980 <juanma1980@gmail.com>  Thu, 19 Jun 2025 07:56:10 +0200
+
 lliurex-artwork (23.7.2.1) jammy; urgency=medium
 
   * Adding new touchpad model to touchpadxlibinputrc.
